--- a/css/intro.css
+++ b/css/intro.css
@@ -3,9 +3,9 @@
   padding: 0;
   height: 100%;
   background-color: rgba(0, 0, 0, 0);
-  background: url('../img/walpaper.jpg') no-repeat center fixed;
-  -webkit-background-size: cover;
-  background-size: cover;
+  /*background: url('../img/walpaper.jpg') no-repeat center fixed;*/
+  /*-webkit-background-size: cover;*/
+  /*background-size: cover;*/
 }
 
 .intro-block {
