--- a/css/intro.css
+++ b/css/intro.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   height: 100%;
+  min-height: 800px;
   background-color: rgba(0, 0, 0, 0);
   /*background: url('../img/walpaper.jpg') no-repeat center fixed;*/
   /*-webkit-background-size: cover;*/
@@ -10,7 +11,7 @@
 
 .intro-block {
   position: absolute;
-  top: 25%;
+  top: 45%;
   left: 3%;
   width: 280px;
   height: 445px;
@@ -80,7 +81,7 @@
 
 @media (min-width: 400px) {
   .intro-block {
-    top: 25%;
+    top: 45%;
     left: 5%;
     width: 450px;
     height: 480px;
